--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1>CifraClub Colaborativo</h1>
-<app-search-bar></app-search-bar>
-<app-cifra-card></app-cifra-card>
+<app-search-bar (sender)="receiver($event)"></app-search-bar>
+<app-cifra-card [songToSearch]="songName"></app-cifra-card>
